--- a/public/index.html
+++ b/public/index.html
@@ -140,6 +140,113 @@
 
             </div>
          </section>
+
+         <!-- About Section -->
+          <section id="about" class="py-24 translate-y-4 transition-all duration-500">
+                <div class="container mx-auto px-4">
+                    <div class="grid grid-cols-2 gap-16 items-center">
+                        <div>
+                            <h2 class="text-4xl font-bold mb-6">About Me</h2>
+                            <p class="text-xl text-gray-600 dark:text-gray-400 mb-6">
+                                I'm a Full-Stack developer focused on crafting clean & user-friendly experiences. 
+                            </p>
+                            <p class="text-gray-600 dark:text-gray-400 mb-6">
+                                I build responsive websites that are fast, easy to use, and follow best coding practices. My expertise includes HTML, CSS, JavaScript, and modern frameworks to create dynamic, engaging interfaces with clean, optimized code.  
+                            </p>
+                            <p class="text-gray-600 dark:text-gray-400 mb-8">
+                                When I'm not coding, you can find me exploring new technologies, contributing to boardgame development, or playing Dungeons & Dragons with friends. I love combining my passion for technology with creativity to build amazing products that make a difference.
+                            </p>
+                            <div class="flex flex-row gap-4">
+                                <a href="#contact" class="px-8 py-3 bg-primary text-white rounded-lg shadow-lg hover:bg-blue-600 transition-all duration-300 transform hover:-translate-y-1 hover:shadow-blue-300/30 dark:hover:shadow-blue-500/20 shadow-blue-200/20 dark:shadow-blue-700/10 text-center">
+                                    Contact Me
+                                </a>
+                                <a href="#" class="px-8 py-3 bg-white dark:bg-dark-background-secondary text-gray-900 dark:text-white border borger-gray-200 dark:border-gray-700 rounded-lg hover:border-gray-900 dark:hover:border-white transition-colors text-center">Download Resume</a>
+                            </div>
+                        </div>
+                        <div class="relative">
+                            <div class="w-72 h-72 mx-auto animate-morph bg-gradient-to-br from-primary via-secondary to-accent rounded-full relative overflow-hidden">
+                                <div class="absoliute inset-0 bg-gradient-to-br from-primary/50 via-secondary/50 to-accent/50 rounded-full blur-2xl animate-morph"></div>
+                                <img src="../assets/jelo.png" alt="Profile Photo" class="absolute inset-0 w-full h-full object-cover z-10">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+          </section>
+
+          <!-- Skills Section-->
+           <section id="skills" class="py-24 bg-gray-50 dark:bg-dark-background-secondary translate-y-4 transition-all duration-500">
+                <div class="container mx-auto px-4">
+                    <h2 class="text-4xl font-bold text-center mb-4">
+                        My skills
+                    </h2>
+                    <p class="text-xl text-gray-600 dark:text-gray-400 text-center mb-16">
+                        Technologies and tools I use to bring products to life
+                    </p>
+                    
+                        <div class="grid grid-cols-3 gap-8">
+                            <!-- Skill Card 1 -->
+                            <div class="bg-white dark:bg-dark-background p-8 rounded-lg shadow-lg">
+                                <div class="w-16 h-16 bg-red-500/10 rounded-full flex items-center justify-center mb-6">
+                                    <i class="fa-brands fa-html5 text-red-500 text-3xl"></i>
+                                </div>
+                            <h3 class="text-xl font-bold mb-4">HTML5</h3>
+                            <div class="w-full h-2 bg-gray-200 dark:bg-dark-background rounded-full overflow-hidden">
+                                <div class="w-[55%] h-full bg-gradient-to-r from-primary to-secondary rounded-full"></div>
+                            </div>
+                        </div>
+                        <!-- Skill Card 2 -->
+                        <div class="bg-white dark:bg-dark-background p-8 rounded-lg shadow-lg">
+                            <div class="w-16 h-16 bg-blue-500/10 rounded-full flex items-center justify-center mb-6">
+                                <i class="fa-brands fa-css3 text-blue-500 text-3xl"></i>
+                            </div>
+                            <h3 class="text-xl font-bold mb-4">CSS3</h3>
+                            <div class="w-full h-2 bg-gray-200 dark:bg-dark-background rounded-full overflow-hidden">
+                                <div class="w-[30%] h-full bg-gradient-to-r from-primary to-secondary rounded-full"></div>
+                            </div>
+                        </div>
+                        <!-- Skill Card 3 -->
+                        <div class="bg-white dark:bg-dark-background p-8 rounded-lg shadow-lg">
+                            <div class="w-16 h-16 bg-yellow-500/10 rounded-full flex items-center justify-center mb-6">
+                                <i class="fa-brands fa-js text-yellow-500 text-3xl"></i>
+                            </div>
+                            <h3 class="text-xl font-bold mb-4">JavaScript</h3>
+                            <div class="w-full h-2 bg-gray-200 dark:bg-dark-background rounded-full overflow-hidden">
+                                <div class="w-[70%] h-full bg-gradient-to-r from-primary to-secondary rounded-full"></div>
+                            </div>
+                        </div>
+                        <!-- Skill Card 4 -->
+                        <div class="bg-white dark:bg-dark-background p-8 rounded-lg shadow-lg">
+                            <div class="w-16 h-16 bg-blue-400/10 rounded-full flex items-center justify-center mb-6">
+                                <i class="fa-brands fa-react text-blue-400 text-3xl"></i>
+                            </div>
+                            <h3 class="text-xl font-bold mb-4">React</h3>
+                            <div class="w-full h-2 bg-gray-200 dark:bg-dark-background rounded-full overflow-hidden">
+                                <div class="w-[50%] h-full bg-gradient-to-r from-primary to-secondary rounded-full"></div>
+                            </div>
+                        </div>
+                        <!-- Skill Card 5 -->
+                        <div class="bg-white dark:bg-dark-background p-8 rounded-lg shadow-lg">
+                            <div class="w-16 h-16 bg-orange-500/10 rounded-full flex items-center justify-center mb-6">
+                                <i class="fa-brands fa-git-alt text-orange-500 text-3xl"></i>
+                            </div>
+                            <h3 class="text-xl font-bold mb-4">Git</h3>
+                            <div class="w-full h-2 bg-gray-200 dark:bg-dark-background rounded-full overflow-hidden">
+                                <div class="w-[75%] h-full bg-gradient-to-r from-primary to-secondary rounded-full"></div>
+                            </div>
+                        </div>
+                        <!-- Skill Card 6 -->
+                        <div class="bg-white dark:bg-dark-background p-8 rounded-lg shadow-lg">
+                            <div class="w-16 h-16 bg-green-500/10 rounded-full flex items-center justify-center mb-6">
+                                <img width="30" height="30" src="https://img.icons8.com/color/48/mongo-db.png" alt="mongo-db"/>
+                            </div>
+                            <h3 class="text-xl font-bold mb-4">MongoDB</h3>
+                            <div class="w-full h-2 bg-gray-200 dark:bg-dark-background rounded-full overflow-hidden">
+                                <div class="w-[75%] h-full bg-gradient-to-r from-primary to-secondary rounded-full"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+           </section>
 </body>
 
 </html>
