add github link

--- a/public/index.html
+++ b/public/index.html
@@ -359,7 +359,7 @@
                                     <i class="fa-solid fa-envelope text-primary text-xl"></i>
                                 </div>
                                 <h3 class="text-xl font-bold mb-2">Email</h3>
-                                <p class="text-gray-600 dark:text-gray-400">Example@Test.com</p>
+                                <p class="text-gray-600 dark:text-gray-400">deregla.john.louis@gmail.com</p>
                              </div>
                              <!-- Location -->
                              <div class="bg-white dark:bg-dark-background p-6 rounded-lg shadow-lg text-center">
@@ -376,7 +376,7 @@
                                 </div>
                                 <h3 class="text-xl font-bold mb-2">Social</h3>
                                 <div class="flex justify-center space-x-4 mt-2">
-                                    <a href="#" class="bg-gray-100 dark:bg-dark-background-secondary rounded-full flex items-center justify-center text-gray-600 hover:text-primary dark:hover:text-primary dark:text-gray-400 transition-all duration-300">
+                                    <a href="https://github.com/Jilofish" class="bg-gray-100 dark:bg-dark-background-secondary rounded-full flex items-center justify-center text-gray-600 hover:text-primary dark:hover:text-primary dark:text-gray-400 transition-all duration-300">
                                         <i class="fa-brands fa-github"></i>
                                     </a>
                              </div>
@@ -434,7 +434,7 @@
                                 <a href="#contact" class="dark:text-gray-400 hover:text-primary dark:hover:text-primary transition-colors">Contact</a>
                             </li>
                         </ul>
-                        <div href="#" class="text-gray-600 dark:text-gray-400 hover:text-primary dark:hover:text-primary transition-colors">
+                        <div href="https://github.com/Jilofish" class="text-gray-600 dark:text-gray-400 hover:text-primary dark:hover:text-primary transition-colors">
                             <i class="fa-brands fa-github"></i>
                         </div>
                     </div>
