rearranged the folders

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
-    <link rel="icon" href="../assets/jelo.png" class="round-full" type="image/x-icon">
+    <link rel="icon" href="./assets/jelo.png" class="round-full" type="image/x-icon">
     <title>De Regla Portfolio</title>
 </head>
 
@@ -200,7 +200,7 @@
                         <div class="relative">
                             <div class="w-72 h-72 mx-auto animate-morph bg-gradient-to-br from-primary via-secondary to-accent rounded-full relative overflow-hidden">
                                 <div class="absoliute inset-0 bg-gradient-to-br from-primary/50 via-secondary/50 to-accent/50 rounded-full blur-2xl animate-morph"></div>
-                                <img src="../assets/jelo.png" alt="Profile Photo" class="absolute inset-0 w-full h-full object-cover z-10">
+                                <img src="./assets/jelo.png" alt="Profile Photo" class="absolute inset-0 w-full h-full object-cover z-10">
                             </div>
                         </div>
                     </div>
@@ -295,7 +295,7 @@
                         <!-- Project Card 1 -->
                          <div class="bg-white dark:bg-dark-background rounded-lg shadow-lg overflow-hidden hover:shadow-xl transition-all duration-300 transform hover:-translate-y-1">
                             <div class="h-48 relative">
-                                <img src="../assets/jelo.png" alt="Project 1" class="w-full h-full object-cover">
+                                <img src="./assets/jelo.png" alt="Project 1" class="w-full h-full object-cover">
                                 <div class="absolute inset-0 bg-black/20"></div>
                             </div>
                             <div class="p-6">
@@ -315,10 +315,10 @@
                                 </div>
                             </div>
                          </div>
-                         <!-- Project Card 1 -->
+                         <!-- Project Card 2 -->
                          <div class="bg-white dark:bg-dark-background rounded-lg shadow-lg overflow-hidden hover:shadow-xl transition-all duration-300 transform hover:-translate-y-1">
                             <div class="h-48 relative">
-                                <img src="../assets/Super Hygiene App Icon.png" alt="Project 1" class="w-full h-full object-cover">
+                                <img src="./assets/Super Hygiene App Icon.png" alt="Project 1" class="w-full h-full object-cover">
                                 <div class="absolute inset-0 bg-black/20"></div>
                             </div>
                             <div class="p-6">
