--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
-    <link rel="icon" href="./assets/jelo.png" class="round-full" type="image/x-icon">
+    <link rel="icon" href="./assets/circlejelo.png" class="round-full" type="image/png">
     <title>De Regla Portfolio</title>
 </head>
 
