--- a/public/index.html
+++ b/public/index.html
@@ -158,7 +158,7 @@
                         <div class="w-12 h-12 bg-primary/10 rounded-full flex items-center justify-center mb-6">
                             <i class="fa-solid fa-bolt text-primary text-xl"></i>
                         </div>
-                        <h3 class="text-xl font-bold mb-4">performance Optimization</h3>
+                        <h3 class="text-xl font-bold mb-4">Performance Optimization</h3>
                         <p class="text-gray-600 dark:text-gray-400">Ensuring fast load times and smooth experiences through efficient code and asset optimization.</p>
                     </div>
 
@@ -332,6 +332,29 @@
                                 </div>
                                 <div class="flex gap-4">
                                     <a href="https://github.com/Jilofish/Super-Hygiene-phase-2" class="flex items-center text-gray-600 dark:text-gray-400 hover:text-primary dark:hover:text-primary transition-colors">
+                                        <i class="fa-brands fa-github"></i>
+                                        Code
+                                    </a>
+                                </div>
+                            </div>
+                         </div>
+                         <!-- Project Card 3 -->
+                         <div class="bg-white dark:bg-dark-background rounded-lg shadow-lg overflow-hidden hover:shadow-xl transition-all duration-300 transform hover:-translate-y-1">
+                            <div class="h-48 relative">
+                                <img src="./assets/Kippian.png" alt="Project 1" class="w-full h-full object-cover">
+                                <div class="absolute inset-0 bg-black/20"></div>
+                            </div>
+                            <div class="p-6">
+                                <h3 class="text-xl font-bold mb-4">D&D Wiki Website</h3>
+                                <p class="text-gray-600 dark:text-gray-400 mb-4 h-16">
+                                    A website that serves as a wiki for Dungeons & Dragons players to share and discover homebrew content, including past sessions, character builds, and custom rules.
+                                </p>
+                                <div class="flex flex-wrap gap-2 my-6">
+                                    <span class="px-3 py-1 bg-gray-100 dark:bg-dark-background-secondary text-gray-600 dark:text-gray-400 rounded-full text-sm">TypeScript</span>
+                                    <span class="px-3 py-1 bg-gray-100 dark:bg-dark-background-secondary text-gray-600 dark:text-gray-400 rounded-full text-sm">Quartz v4</span>
+                                </div>
+                                <div class="flex gap-4">
+                                    <a href="https://github.com/blackraspberryyy/kippian-wiki" class="flex items-center text-gray-600 dark:text-gray-400 hover:text-primary dark:hover:text-primary transition-colors">
                                         <i class="fa-brands fa-github"></i>
                                         Code
                                     </a>
