--- a/public/index.html
+++ b/public/index.html
@@ -217,66 +217,48 @@
                         Technologies and tools I use to bring products to life
                     </p>
                     
-                        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+                        <div class="grid grid-cols-3 md:grid-cols-4 lg:grid-cols-5 gap-4">
                             <!-- Skill Card 1 -->
-                            <div class="bg-white dark:bg-dark-background p-8 rounded-lg shadow-lg">
-                                <div class="w-16 h-16 bg-red-500/10 rounded-full flex items-center justify-center mb-6">
-                                    <i class="fa-brands fa-html5 text-red-500 text-3xl"></i>
+                            <div class="bg-white dark:bg-dark-background p-8 rounded-lg shadow-lg flex flex-col items-center">
+                                <div class="w-16 h-16 bg-red-500/10 rounded-full flex items-center justify-center mb-4">
+                                <i class="fa-brands fa-html5 text-4xl text-red-500"></i>
                                 </div>
-                            <h3 class="text-xl font-bold mb-4">HTML5</h3>
-                            <div class="w-full h-2 bg-gray-200 dark:bg-dark-background rounded-full overflow-hidden">
-                                <div class="w-[55%] h-full bg-gradient-to-r from-primary to-secondary rounded-full"></div>
+                                <h3 class="text-xl font-bold text-center">HTML5</h3>
                             </div>
-                        </div>
                         <!-- Skill Card 2 -->
-                        <div class="bg-white dark:bg-dark-background p-8 rounded-lg shadow-lg">
-                            <div class="w-16 h-16 bg-blue-500/10 rounded-full flex items-center justify-center mb-6">
-                                <i class="fa-brands fa-css3 text-blue-500 text-3xl"></i>
+                        <div class="bg-white dark:bg-dark-background p-8 rounded-lg shadow-lg flex flex-col items-center">
+                            <div class="w-16 h-16 bg-blue-500/10 rounded-full flex items-center justify-center mb-4">
+                            <i class="fa-brands fa-css3 text-blue-500 text-4xl"></i>
                             </div>
-                            <h3 class="text-xl font-bold mb-4">CSS3</h3>
-                            <div class="w-full h-2 bg-gray-200 dark:bg-dark-background rounded-full overflow-hidden">
-                                <div class="w-[30%] h-full bg-gradient-to-r from-primary to-secondary rounded-full"></div>
-                            </div>
+                            <h3 class="text-xl font-bold text-center">CSS3</h3>
                         </div>
                         <!-- Skill Card 3 -->
-                        <div class="bg-white dark:bg-dark-background p-8 rounded-lg shadow-lg">
-                            <div class="w-16 h-16 bg-yellow-500/10 rounded-full flex items-center justify-center mb-6">
-                                <i class="fa-brands fa-js text-yellow-500 text-3xl"></i>
+                        <div class="bg-white dark:bg-dark-background p-8 rounded-lg shadow-lg flex flex-col items-center">
+                            <div class="w-16 h-16 bg-yellow-500/10 rounded-full flex items-center justify-center mb-4">
+                            <i class="fa-brands fa-js text-yellow-500 text-4xl"></i>
                             </div>
-                            <h3 class="text-xl font-bold mb-4">JavaScript</h3>
-                            <div class="w-full h-2 bg-gray-200 dark:bg-dark-background rounded-full overflow-hidden">
-                                <div class="w-[70%] h-full bg-gradient-to-r from-primary to-secondary rounded-full"></div>
-                            </div>
+                            <h3 class="text-xl font-bold text-center">JavaScript</h3>
                         </div>
                         <!-- Skill Card 4 -->
-                        <div class="bg-white dark:bg-dark-background p-8 rounded-lg shadow-lg">
-                            <div class="w-16 h-16 bg-blue-400/10 rounded-full flex items-center justify-center mb-6">
-                                <i class="fa-brands fa-react text-blue-400 text-3xl"></i>
+                        <div class="bg-white dark:bg-dark-background p-8 rounded-lg shadow-lg flex flex-col items-center">
+                            <div class="w-16 h-16 bg-blue-400/10 rounded-full flex items-center justify-center mb-4">
+                            <i class="fa-brands fa-react text-blue-400 text-4xl"></i>
                             </div>
-                            <h3 class="text-xl font-bold mb-4">React</h3>
-                            <div class="w-full h-2 bg-gray-200 dark:bg-dark-background rounded-full overflow-hidden">
-                                <div class="w-[50%] h-full bg-gradient-to-r from-primary to-secondary rounded-full"></div>
-                            </div>
+                            <h3 class="text-xl font-bold text-center">React</h3>
                         </div>
                         <!-- Skill Card 5 -->
-                        <div class="bg-white dark:bg-dark-background p-8 rounded-lg shadow-lg">
-                            <div class="w-16 h-16 bg-orange-500/10 rounded-full flex items-center justify-center mb-6">
-                                <i class="fa-brands fa-git-alt text-orange-500 text-3xl"></i>
+                        <div class="bg-white dark:bg-dark-background p-8 rounded-lg shadow-lg flex flex-col items-center">
+                            <div class="w-16 h-16 bg-orange-500/10 rounded-full flex items-center justify-center mb-4">
+                            <i class="fa-brands fa-git-alt text-orange-500 text-4xl"></i>
                             </div>
-                            <h3 class="text-xl font-bold mb-4">Git</h3>
-                            <div class="w-full h-2 bg-gray-200 dark:bg-dark-background rounded-full overflow-hidden">
-                                <div class="w-[75%] h-full bg-gradient-to-r from-primary to-secondary rounded-full"></div>
-                            </div>
+                            <h3 class="text-xl font-bold text-center">Git</h3>
                         </div>
                         <!-- Skill Card 6 -->
-                        <div class="bg-white dark:bg-dark-background p-8 rounded-lg shadow-lg">
-                            <div class="w-16 h-16 bg-green-500/10 rounded-full flex items-center justify-center mb-6">
-                                <img width="30" height="30" src="https://img.icons8.com/color/48/mongo-db.png" alt="mongo-db"/>
+                        <div class="bg-white dark:bg-dark-background p-8 rounded-lg shadow-lg flex flex-col items-center">
+                            <div class="w-16 h-16 bg-green-500/10 rounded-full flex items-center justify-center mb-4">
+                            <img width="30" height="30" src="https://img.icons8.com/color/48/mongo-db.png" alt="mongo-db"/>
                             </div>
-                            <h3 class="text-xl font-bold mb-4">MongoDB</h3>
-                            <div class="w-full h-2 bg-gray-200 dark:bg-dark-background rounded-full overflow-hidden">
-                                <div class="w-[75%] h-full bg-gradient-to-r from-primary to-secondary rounded-full"></div>
-                            </div>
+                            <h3 class="text-xl font-bold text-center">MongoDB</h3>
                         </div>
                     </div>
                 </div>
