Added CV and made download working

--- a/public/index.html
+++ b/public/index.html
@@ -194,7 +194,9 @@
                                 <a href="#contact" class="px-8 py-3 bg-primary text-white rounded-lg shadow-lg hover:bg-blue-600 transition-all duration-300 transform hover:-translate-y-1 hover:shadow-blue-300/30 dark:hover:shadow-blue-500/20 shadow-blue-200/20 dark:shadow-blue-700/10 text-center">
                                     Contact Me
                                 </a>
-                                <a href="#" class="px-8 py-3 bg-white dark:bg-dark-background-secondary text-gray-900 dark:text-white border borger-gray-200 dark:border-gray-700 rounded-lg hover:border-gray-900 dark:hover:border-white transition-colors text-center">Download Resume</a>
+                                <a href="assets/John-Louis-De-Regla-CV.pdf" 
+                                download="John-Louis-De-Regla-CV.pdf" 
+                                class="px-8 py-3 bg-white dark:bg-dark-background-secondary text-gray-900 dark:text-white border borger-gray-200 dark:border-gray-700 rounded-lg hover:border-gray-900 dark:hover:border-white transition-colors text-center">Download Resume</a>
                             </div>
                         </div>
                         <div class="relative">
