--- a/public/index.html
+++ b/public/index.html
@@ -219,14 +219,14 @@
                         Technologies and tools I use to bring products to life
                     </p>
                     
-                        <div class="grid grid-cols-3 md:grid-cols-4 lg:grid-cols-5 gap-4">
-                            <!-- Skill Card 1 -->
-                            <div class="bg-white dark:bg-dark-background p-8 rounded-lg shadow-lg flex flex-col items-center">
-                                <div class="w-16 h-16 bg-red-500/10 rounded-full flex items-center justify-center mb-4">
-                                <i class="fa-brands fa-html5 text-4xl text-red-500"></i>
-                                </div>
-                                <h3 class="text-xl font-bold text-center">HTML5</h3>
+                        <div class="grid grid-cols-3 md:grid-cols-5 lg:grid-cols-6 gap-4">
+                        <!-- Skill Card 1 -->
+                        <div class="bg-white dark:bg-dark-background p-8 rounded-lg shadow-lg flex flex-col items-center">
+                            <div class="w-16 h-16 bg-red-500/10 rounded-full flex items-center justify-center mb-4">
+                            <i class="fa-brands fa-html5 text-4xl text-red-500"></i>
                             </div>
+                            <h3 class="text-xl font-bold text-center">HTML5</h3>
+                        </div>
                         <!-- Skill Card 2 -->
                         <div class="bg-white dark:bg-dark-background p-8 rounded-lg shadow-lg flex flex-col items-center">
                             <div class="w-16 h-16 bg-blue-500/10 rounded-full flex items-center justify-center mb-4">
@@ -261,6 +261,20 @@
                             <img width="30" height="30" src="https://img.icons8.com/color/48/mongo-db.png" alt="mongo-db"/>
                             </div>
                             <h3 class="text-xl font-bold text-center">MongoDB</h3>
+                        </div>
+                        <!-- Skill Card 7 -->
+                        <div class="bg-white dark:bg-dark-background p-8 rounded-lg shadow-lg flex flex-col items-center">
+                            <div class="w-16 h-16 bg-green-800/15 rounded-full flex items-center justify-center mb-4">
+                            <img width="40" height="40" src="assets/langgraph.png" alt="mongo-db"/>
+                            </div>
+                            <h3 class="text-xl font-bold text-center">LangGraph</h3>
+                        </div>
+                        <!-- Skill Card 8 -->
+                        <div class="bg-white dark:bg-dark-background p-8 rounded-lg shadow-lg flex flex-col items-center">
+                            <div class="w-16 h-16 bg-yellow-400/10 rounded-full flex items-center justify-center mb-4">
+                            <img width="40" height="40" src="assets/python.png" alt="mongo-db"/>
+                            </div>
+                            <h3 class="text-xl font-bold text-center">Python</h3>
                         </div>
                     </div>
                 </div>
@@ -331,7 +345,7 @@
                             <div class="p-6">
                                 <h3 class="text-xl font-bold mb-4">D&D Wiki Website</h3>
                                 <p class="text-gray-600 dark:text-gray-400 mb-4 h-16">
-                                    A website that serves as a wiki for Dungeons & Dragons players to share and discover homebrew content, including past sessions, character builds, and custom rules.
+                                    A website that serves as a wiki for Dungeons & Dragons players to share and discover homebrew content, including past sessions.
                                 </p>
                                 <div class="flex flex-wrap gap-2 my-6">
                                     <span class="px-3 py-1 bg-gray-100 dark:bg-dark-background-secondary text-gray-600 dark:text-gray-400 rounded-full text-sm">TypeScript</span>
@@ -339,6 +353,29 @@
                                 </div>
                                 <div class="flex gap-4">
                                     <a href="https://github.com/blackraspberryyy/kippian-wiki" class="flex items-center text-gray-600 dark:text-gray-400 hover:text-primary dark:hover:text-primary transition-colors">
+                                        <i class="fa-brands fa-github"></i>
+                                        Code
+                                    </a>
+                                </div>
+                            </div>
+                         </div>
+                         <!-- Project Card 4 -->
+                         <div class="bg-white dark:bg-dark-background rounded-lg shadow-lg overflow-hidden hover:shadow-xl transition-all duration-300 transform hover:-translate-y-1">
+                            <div class="h-48 relative">
+                                <img src="./assets/langgraph.png" alt="Project 1" class="w-full h-full object-cover">
+                                <div class="absolute inset-0 bg-black/20"></div>
+                            </div>
+                            <div class="p-6">
+                                <h3 class="text-xl font-bold mb-4">LangGraph Exercises</h3>
+                                <p class="text-gray-600 dark:text-gray-400 mb-4 h-16">
+                                    A repository where I practice my skills in LangGraph, a framework for building AI applications.
+                                </p>
+                                <div class="flex flex-wrap gap-2 my-6">
+                                    <span class="px-3 py-1 bg-gray-100 dark:bg-dark-background-secondary text-gray-600 dark:text-gray-400 rounded-full text-sm">LangGraph</span>
+                                    <span class="px-3 py-1 bg-gray-100 dark:bg-dark-background-secondary text-gray-600 dark:text-gray-400 rounded-full text-sm">Python</span>
+                                </div>
+                                <div class="flex gap-4">
+                                    <a href="https://github.com/Jilofish/langgraph-practices" class="flex items-center text-gray-600 dark:text-gray-400 hover:text-primary dark:hover:text-primary transition-colors">
                                         <i class="fa-brands fa-github"></i>
                                         Code
                                     </a>
